# tank

./: .gitignore  CMakeLists.txt  README.md
src/: app.cpp  client.cpp  game.cpp  main.cpp  object.cpp  packet.cpp  player.cpp  server.cpp
src/clients/: ai.cpp  socket.cpp
src/headers/: app.h  client.h  common.h  debug.h  game.h  object.h  packet.h  player.h  server.h
src/headers/clients/: ai.h  socket.h
src/headers/objects/: base.h  border.h  bullet.h  item.h  tank.h  wall.h
src/objects/: base.cpp  border.cpp  bullet.cpp  item.cpp  tank.cpp  wall.cpp
